--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
     "styled-components": "^5.3.5",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react-router-dom": "^6.4.0"
   }
 }
